style.css
/* ... */
strong {
  font-weight: 600;
}

em {
  font-style: italic;
}

sub,
sup {
  vertical-align: baseline;
  font-size: 0.8em;
  position: relative;
  top: -0.5em;
}

sub {
  top: 0.3em;
}

ins {
  text-decoration: underline;
}

del {
  text-decoration: line-through;
}

small {
  font-size: 0.85rem;
}

code {
  color: #96268a;
  background-color: #f2f2f2;
  font-family: "Lucida Sans Typewriter", "Lucida Console", monaco, "Bitstream Vera Sans Mono", monospace;
  border: 1px solid #e5e5e5;
  border-radius: 2px;
  padding: 0.1em 0.25em;
}

hr {
  border: solid #e5e5e5;
  border-width: 1px 0 0;
  height: 0;
}

ul {
  list-style: disc;
}

ol {
  list-style: decimal;
}

li ul,
li ol {
  margin-bottom: 0;
}

dt {
  font-weight: bold;
}

dd,
ol,
ul {
  margin-left: 1.3333rem;
}

a {
  color: #7342ab;
  text-decoration: underline;
}

a:focus {
  outline: none;
  box-shadow: 0 0 0 2px #7342ab;
}

a:hover {
  text-decoration: none;
}

img {
  border: 0;
  max-width: 100%;
  height: inherit;
  font-style: italic;
  vertical-align: middle;
}

img[width], img[height] {
  max-width: none;
}

table {
  width: 100%;
}

th,
td {
  text-align: left;
  vertical-align: top;
}

th,
td {
  text-align: left;
  vertical-align: top;
  padding: 12px 24px;
}

th {
  color: #fff;
  background-color: #7342ab;
  font-weight: 600;
}

button:focus,
input:focus {
  outline: none;
  box-shadow: 0 0 0 2px #7342ab;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

[disabled] {
  opacity: 0.4;
  pointer-events: none;
  cursor: not-allowed;
  box-shadow: none;
}

.o-box {
  display: block;
  padding: 24px;
}

.o-box:after {
  content: "" !important;
  display: block !important;
  clear: both !important;
}

.o-box > :last-child {
  margin-bottom: 0;
}

.o-box--small {
  padding: 12px;
}

.o-box--large {
  padding: 36px;
}

.o-box--flush {
  padding-left: 0;
  padding-right: 0;
}

.o-box--flat {
  padding-top: 0;
  padding-bottom: 0;
}

.o-button-bare {
  display: inline-block;
  color: inherit;
  background-color: transparent;
  font: inherit;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  border: none;
  border-radius: 0;
  height: auto;
  width: auto;
  margin: 0;
  padding: 0;
  cursor: pointer;
  transition: 0;
  box-shadow: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.o-button-bare:hover {
  background-color: transparent;
}

.o-container--xxs {
  width: 170px;
}

.o-container--xs {
  width: 250px;
}

.o-container--sm {
  width: 350px;
}

.o-container--md {
  width: 450px;
}

.o-container--lg {
  width: 600px;
}

.o-container--xl {
  width: 800px;
}

.o-container--xxl {
  width: 1200px;
}

.o-container--grey {
  background-color: #f2f2f2;
  border: 1px solid #e5e5e5;
  border-radius: 3px;
}

.o-container--grey code {
  background-color: transparent;
  border-radius: 0;
  border: 0;
  padding: 0;
}

.o-scrollable {
  overflow-y: scroll;
}

.o-scrollable--small {
  max-height: 265px;
}

.o-container--responsive {
  max-width: 100%;
  overflow-x: auto;
  white-space: nowrap;
  -webkit-overflow-scrolling: touch;
}

.o-flag {
  display: table;
  width: 100%;
  border-spacing: 0;
}

.o-flag:after {
  content: "" !important;
  display: block !important;
  clear: both !important;
}

.o-flag__img,
.o-flag__body {
  display: table-cell;
  vertical-align: middle;
}

.o-flag__img {
  width: 1px;
  padding-right: 24px;
}

.o-flag__img > img {
  max-width: none;
}

.o-flag__body {
  width: auto;
}

.o-flag__body,
.o-flag__body > :last-child {
  margin-bottom: 0;
}

.o-flag--small > .o-flag__img {
  padding-right: 12px;
}

.o-flag--large > .o-flag__img {
  padding-right: 36px;
}

.o-flag--top > .o-flag__img,
.o-flag--top > .o-flag__body {
  vertical-align: top;
}

.o-flag--bottom > .o-flag__img,
.o-flag--bottom > .o-flag__body {
  vertical-align: bottom;
}

.o-input-bare {
  font: inherit;
  background-color: transparent;
  border: none;
  border-radius: 0;
  width: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.o-island {
  display: block;
  margin-bottom: 24px;
}

.o-island:after {
  content: "" !important;
  display: block !important;
  clear: both !important;
}

.o-island > :last-child {
  margin-bottom: 0;
}

.o-island--large {
  margin-bottom: 36px;
}

.o-island--huge {
  margin-bottom: 48px;
}

.o-layout {
  margin-left: -12px;
  margin-right: -12px;
}

.o-layout:after {
  content: "" !important;
  display: block !important;
  clear: both !important;
}

.o-layout__item {
  float: left;
  width: 100%;
  padding-left: 12px;
  padding-right: 12px;
}

.o-layout--flush > .o-layout__item {
  padding-left: 0;
  padding-right: 0;
}

.o-list-bare {
  list-style: none;
  margin: 0;
}

.o-list-inline {
  margin-left: 0;
  list-style: none;
}

.o-list-inline__item {
  float: left;
}

.o-media {
  display: block;
}

.o-media:after {
  content: "" !important;
  display: block !important;
  clear: both !important;
}

.o-media__img {
  float: left;
  margin-right: 24px;
}

.o-media__img > img {
  display: block;
}

.o-media__body {
  overflow: hidden;
  display: block;
}

.o-media__body,
.o-media__body > :last-child {
  margin-bottom: 0;
}

.o-media--flush > .o-media__img {
  margin-right: 0;
  margin-left: 0;
}

.o-media--small > .o-media__img {
  margin-right: 12px;
}

.o-media--large > .o-media__img {
  margin-right: 36px;
}

.c-alert {
  position: relative;
  width: 100%;
  background-color: #f2f2f2;
  border-radius: 3px;
  margin-bottom: 24px;
}

.c-alert + .c-alert {
  margin-top: -20px;
}

.c-alert--success {
  background-color: #e1f5f0;
}

.c-alert--warning {
  background-color: #fffdce;
}

.c-alert--error {
  background-color: #f5e1e1;
}
/* ... */

